# replicube_lua_exporter

./: .gitignore  .taplo  .taplo.toml  README.md  agents.md  go.mod  godotdatparser.go  hk.pkl  main.go  mise.toml  puzzlejsonparser.go  replicube_lua_exporter  tasks.toml
.github/workflows/: release.yml
replicube_lua_exporter_golang/: dirname_lookup.go  dirnamelookup.go  godotdatparser.go  main.go  mise.toml  puzzlejsonparser.go
replicube_lua_exporter_rust/: Cargo.toml  mise.toml
replicube_lua_exporter_rust/src/: main.rs  mod_json_outputfile_creator.rs  mod_puzzledata_processor.rs  mod_save_file_parser.rs  puzzle_parser.rs  puzzle_processor.rs
test/solutions_rust/: puzzles.json
test/solutions_rust/001_The_Very_Basics/: 00_code.lua
test/solutions_rust/002_Conditions_May_Apply/: 00_code.lua  01_code 2.lua
test/solutions_rust/003_In_Comparison/: 00_code.lua  01_code 2.lua
test/solutions_rust/004_Explicit_Nothingness/: 00_code.lua
test/solutions_rust/005_Simple_Quadrant/: 00_code.lua  01_code 2.lua  02_code 3.lua
test/solutions_rust/006_3x3_Grid/: 00_code.lua
test/solutions_rust/007_Importance_of_END/: 00_code.lua
test/solutions_rust/008_Simple_Sushi/: 00_code.lua  01_code 2.lua  02_code 3.lua  03_code 4.lua  04_code 5.lua  05_code 6.lua  06_code 7.lua  07_code 8.lua  08_code 9.lua  09_code 10.lua  10_code 11.lua  11_code 12.lua
test/solutions_rust/009_Basic_Cup/: 00_code.lua
test/solutions_rust/010_Quadrants/: 00_code.lua
test/solutions_rust/011_Variable_Outcomes/: 00_code.lua  01_code 2.lua
test/solutions_rust/012_Staircase/: 00_code.lua
(+579 files in other folders)
