[package]
name = "replicube_lua_exporter"
version = "0.9.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
clap = { version = "4.6.0", features = ["derive"] }
lazy_static = "1.5.0"
once_cell = "1.21.4"
phf = { version = "0.13.1", features = ["macros"] }
regex = "1.12.3"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
